<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weather_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/current_temp_description"
        android:gravity="center_horizontal"
        android:text="@string/current_temp_text"
        android:textAllCaps="false"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/temp_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/temp_range_description"
        android:gravity="center_horizontal"
        android:text="@string/temp_range_text"
        android:textAllCaps="false"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_description" />

</LinearLayout>
